# heidi

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  adt-codec-generic.cabal  heidi.cabal  stack.yaml
app/: Main.hs
app/core/: Main.hs
bench/: Space.hs  Time.hs
src/: Heidi.hs
src/Core/Data/: Frame.hs  PrefixTree.hs  Row.hs  Trie.hs
src/Core/Data/Frame/: Generic.hs  List.hs  PrettyPrint.hs
src/Core/Data/Frame/Value/: Generic.hs
src/Core/Data/Row/: Decode.hs  GenericTrie.hs  HashMap.hs  Internal.hs
src/Data/: GenericTrie.hs
src/Data/GenericTrie/: Internal.hs
src/Data/Generics/: Codec.hs  Decode.hs  Encode.hs
src/Data/Generics/Encode/: Internal.hs  OneHot.hs  Val.hs  Val2.hs  ValFix.hs
src/Data/Generics/Encode/Internal/: Prim.hs  Simple.hs
src/Data/Generics/Internal/: Value.hs
src/Heidi/Data/Frame/Algorithms/: GenericTrie.hs  HashMap.hs
src/Heidi/Data/Frame/Algorithms/GenericTrie/: Generic.hs
src/Heidi/Data/Row/: GenericTrie.hs  HashMap.hs
test/: DocTest.hs  Main.hs  Unit.hs
test/Unit/: GenericTrie.hs  HashMap.hs
