name:           adt-codec-generic
version:        0.1.0
homepage:       https://github.com/ocramz/adt-codec-generic#readme
bug-reports:    https://github.com/ocramz/adt-codec-generic/issues
author:         Marco Zocca
maintainer:     Marco Zocca
license:        MIT
build-type:     Simple
cabal-version:  1.12                
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/ocramz/adt-codec-generic

library
  exposed-modules:
      Lib
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      test
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      adt-codec-generic
    , base
    , tasty
    , tasty-hspec
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      bench
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      adt-codec-generic
    , base
    , criterion
  default-language: Haskell2010


-- executable adt-codec-generic
--   main-is: Main.hs
--   other-modules:
--       Paths_adt_codec_generic
--   hs-source-dirs:
--       app
--   ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
--   build-depends:
--       adt-codec-generic
--     , base
--   default-language: Haskell2010