name:           adt-codec-generic
version:        0.1.0
synopsis:       Generic encoding and decoding of algebraic datatypes
description:    Generic encoding and decoding of algebraic datatypes, please see README
homepage:       https://github.com/ocramz/adt-codec-generic#readme
bug-reports:    https://github.com/ocramz/adt-codec-generic/issues
author:         Marco Zocca
maintainer:     Marco Zocca
license:        MIT
copyright:      (c) 2019, Marco Zocca
category:       Generics, Data
build-type:     Simple
cabal-version:  1.12
tested-with:    GHC == 8.6.3                     
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/ocramz/adt-codec-generic

library
  exposed-modules:
                  Data.Generics.Encode
                  Data.Generics.Decode
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
                base > 4.9 && < 4.13
              , generics-sop > 0.3.2
              -- , logging-effect
              , text > 1.2.2
              -- , transformers
              , unordered-containers > 0.2.8
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      test
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
                adt-codec-generic
              , base
              , doctest
              , tasty
              , tasty-hspec
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_adt_codec_generic
  hs-source-dirs:
      bench
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      adt-codec-generic
    , base
    , criterion
  default-language: Haskell2010


-- executable adt-codec-generic
--   main-is: Main.hs
--   other-modules:
--       Paths_adt_codec_generic
--   hs-source-dirs:
--       app
--   ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
--   build-depends:
--       adt-codec-generic
--     , base
--   default-language: Haskell2010