name:           heidi
version:        0.2.0
synopsis:       Tidy data in Haskell
description:    Tidy data in Haskell, via generics.
homepage:       https://github.com/ocramz/heidi#readme
bug-reports:    https://github.com/ocramz/heidi/issues
author:         Marco Zocca
maintainer:     Marco Zocca
license:        MIT
copyright:      (c) 2019-2020, Marco Zocca
category:       Data Science, Data Mining, Generics
build-type:     Simple
cabal-version:  1.12
tested-with:    GHC == 8.0.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
license-file:   LICENSE.md
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/ocramz/heidi

library
  exposed-modules:
                  Heidi
                  Heidi.Data.Frame.Algorithms.GenericTrie
  other-modules:
                  Core.Data.Frame
                  Core.Data.Frame.Generic
                  Core.Data.Frame.List
                  Core.Data.Frame.PrettyPrint
                  Core.Data.Row.Internal
                  Data.Generics.Encode.Internal
                  Data.Generics.Encode.Internal.Prim
                  Data.Generics.Encode.OneHot
                  Heidi.Data.Frame.Algorithms.GenericTrie.Generic                  
                  Heidi.Data.Row.GenericTrie
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
                    base > 4.9 && < 5
                , boxes >= 0.1.4
              -- , bytestring >= 0.10.8.1
              , containers >= 0.5.7.1
              , exceptions >= 0.8.3
              , generics-sop > 0.3.0
              , generic-trie >= 0.3.1
              , hashable >= 1.2.6.1
              -- , logging-effect
              , microlens >= 0.4.8
              , microlens-th >= 0.4.1
              -- , primitive
              , scientific >= 0.3.5.1
              , text >= 1.2.2.2
              -- , time >= 1.6.0.1
              -- , transformers
              , unordered-containers > 0.2.8
              , vector >= 0.12.0.1
              -- , vector-algorithms
  default-language: Haskell2010
  default-extensions: OverloadedStrings

-- unit tests
test-suite unit
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
                Unit.GenericTrie
  hs-source-dirs:
      test
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
                heidi
              , base
              , tasty
              -- , tasty-hunit
              , tasty-hspec
              -- , hspec-expectations
  default-language: Haskell2010

-- test-suite doctest
--   default-language:    Haskell2010           
--   type: exitcode-stdio-1.0
--   main-is: DocTest.hs
--   hs-source-dirs:
--         test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--                 heidi
--               , base 
--               , doctest 

benchmark bench-space
  type: exitcode-stdio-1.0
  main-is: Space.hs
  other-modules:
  hs-source-dirs:
      bench
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      heidi
    , base
    , weigh
  default-language: Haskell2010
              
benchmark bench-time
  type: exitcode-stdio-1.0
  main-is: Time.hs
  other-modules:
  hs-source-dirs:
      bench
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      heidi
    , base
    , criterion
  default-language: Haskell2010


executable app
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
                heidi
              , base
              , exceptions
              , hashable
              , text
              , unordered-containers
  default-language: Haskell2010